--- a/functions.ipynb
+++ b/functions.ipynb
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "# Dump the trained classifier (nn)  with Pickle\n",
+    "# Dump the trained classifier (tfidf)  with Pickle\n",
     "pickle_filename_1 = 'tfidf.pkl'\n",
     "pickled_model_1 = open(pickle_filename_1, 'wb')  # Open the file to save as pkl file\n",
     "pickle.dump(tfidf, pickled_model_1)\n",
