--- a/processing_data.ipynb
+++ b/processing_data.ipynb
@@ -1419,7 +1419,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "# Dump the trained classifier (nn)  with Pickle\n",
+    "# Dump the trained classifier (tfidf)  with Pickle\n",
     "pickle_filename_1 = 'tfidf.pkl'\n",
     "pickled_model_1 = open(pickle_filename_1, 'wb')  # Open the file to save as pkl file\n",
     "pickle.dump(tfidf, pickled_model_1)\n",
@@ -1609,13 +1609,6 @@
     "recommended1 = pred1[1]\n",
     "recommended1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
