--- a/functions.ipynb
+++ b/functions.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "In /Users/amybeisel/opt/anaconda3/envs/U4-S1-NLP/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
+      "The savefig.frameon rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n",
+      "In /Users/amybeisel/opt/anaconda3/envs/U4-S1-NLP/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
+      "The verbose.level rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n",
+      "In /Users/amybeisel/opt/anaconda3/envs/U4-S1-NLP/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
+      "The verbose.fileo rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import re\n",
@@ -18,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,30 +40,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.dropna()"
+    "# df = df.replace('None', np.nan)\n",
+    "# df = df.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NearestNeighbors(algorithm='kd_tree', leaf_size=30, metric='minkowski',\n",
+       "                 metric_params=None, n_jobs=None, n_neighbors=4, p=2,\n",
+       "                 radius=1.0)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def predict():\n",
-    "    tfidf = TfidfVectorizer(stop_words='english', max_features=5000)\n",
-    "    dtm = tfidf.fit_transform(df['Description'])\n",
-    "    dtm = pd.DataFrame(dtm.todense(), columns=tfidf.get_feature_names())\n",
-    "    nn = NearestNeighbors(n_neighbors=4, algorithm='kd_tree')\n",
-    "    nn.fit(dtm)"
+    "tfidf = TfidfVectorizer(stop_words='english', max_features=5000)\n",
+    "dtm = tfidf.fit_transform(df['Effects'])\n",
+    "dtm = pd.DataFrame(dtm.todense(), columns=tfidf.get_feature_names())\n",
+    "nn = NearestNeighbors(n_neighbors=4, algorithm='kd_tree')\n",
+    "nn.fit(dtm)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,38 +185,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"Pineapple-Thai\"\n",
-      "\"Relaxed,Creative,Sleepy,Happy,Focused\"\n",
-      "\"Pineapple,Citrus,Sweet\"\n",
-      "\"Pineapple Thai is a strain that sets itself apart from the rest with a high 5% CBD content. This flower\\u2019s attractiveness comes from its ability to administer powerful pain relief without sedation, embodying true hybrid effects. Although Pineapple Thai is an option for daytime use, its strength may lead to a nighttime preference. Patients who desire the powerful medicinal effects of cannabis without the psychoactive inundation will find Pineapple Thai to be a staple in their arsenal.\"\n",
-      "4.0\n",
-      "\"Pineapple-Trainwreck\"\n",
-      "\"Relaxed,Euphoric,Uplifted,Happy,Giggly\"\n",
-      "\"Pineapple,Pine,Woody\"\n",
-      "\"Bring together the popular clear-headed effects of Pineapple Express and the pain relief qualities of Trainwreck and you get this happy sativa. Pineapple Trainwreck has an earthy aroma and a fruity flavor that usually takes more after its pineapple parent. Long-lasting and potent, this strain hits hard at first, but mellows into a state where being sociable or getting things done is possible. The buzz tends to be more mellow than active, though, so don\\u2019t be surprised if verbal activity is all you get around to.\"\n",
+      "\"Taliban-Poison\"\n",
+      "\"Hungry,Aroused,Sleepy,Giggly,Happy\"\n",
+      "\"Diesel,Skunk,Pine\"\n",
+      "NaN\n",
+      "3.7\n",
+      "\"Alien-Hallucination\"\n",
+      "\"Happy,Relaxed,Giggly,Aroused,Hungry\"\n",
+      "\"Sweet,Earthy,Diesel\"\n",
+      "\"Alien Hallucination is a hybrid cannabis strain that is believed to be a cross between the sedating Tahoe Alien and LSD, a classic Amsterdam hybrid known for its trippy head buzz. Bred by Alien Genetics, this strain will abduct the mind while your body remains anchored in deep physical relaxation.\"\n",
       "4.1\n",
-      "\"Pineapple-Super-Silver-Haze\"\n",
-      "\"Happy,Euphoric,Energetic,Focused,Tingly\"\n",
-      "\"Pineapple,Sweet,Earthy\"\n",
-      "\"Pineapple Super Silver Haze from Fire Bros. is a sativa strain that modifies the widely cherished Super Silver Haze with a Pineapple hybrid strain. This second parent is thought to be either Pineapple Express or Pineapple, a phenotype of Ed Rosenthal Super Bud. The Haze genetics in this strain come through in both flavor and effect, as Pineapple Super Silver Haze delivers a high-flying cerebral buzz alongside a spicy, zesty flavor. Its aroma is more of a tropical medley of candied mango, pineapple, and oranges. Like a cup of coffee, this sativa is a perfect pick-me-up with motivating, talkative, and creative effects and minimal heaviness in the body.\"\n",
-      "4.7\n",
-      "\"Purple-Kush\"\n",
-      "\"Relaxed,Sleepy,Happy,Euphoric,Hungry\"\n",
-      "\"Earthy,Sweet,Grape\"\n",
-      "\"Purple Kush is a pure indica strain that emerged from the Oakland area of California as the result of a Hindu Kush and Purple Afghani cross. Its aroma is subtle and earthy with sweet overtones typical of Kush varieties. Blissful, long-lasting euphoria blankets the mind while physical relaxation rids the body of pain, sleeplessness, and stress. Purple Kush will grow wide rather than tall, and will be ready for harvest following an 8 week flowering time.\"\n",
-      "4.3\n"
+      "\"Strawberry-Frost\"\n",
+      "\"Happy,Aroused,Relaxed,Giggly,Hungry\"\n",
+      "\"Sweet,Strawberry,Earthy\"\n",
+      "\"Strawberry Frost by MaddFarmer is a three-way cross of fruity trichome producers. The genetic descendant of a Strawberry Cough/Deep Chunk hybrid crossed with Space Queen, Strawberry Frost is a heady indica-dominant strain that is gentle on the body. This dreamy strain calms the body and elevates the mind, placing the consumer in a relaxed, whimsical state. These effects naturally aid with stress, anxiety, and general restlessness.\\u00a0\"\n",
+      "5.0\n",
+      "\"Sugar-Punch\"\n",
+      "\"Hungry,Happy,Giggly,Aroused,Uplifted\"\n",
+      "\"Skunk,Sweet,Woody\"\n",
+      "\"Sugar Punch is a sativa-dominant hybrid bred by Sannie Seeds that crosses Super Silver Haze\\u00a0with\\u00a0The One. These strong, sweet buds offer a mixed aroma of berry and lemon, delivering sedating, dreamy effects. Indoor grows can expect flowers between 9 and 10 weeks.\"\n",
+      "4.8\n"
      ]
     }
    ],
    "source": [
-    "recommend('happy,Sleepy,Apricot,Citrus,Grapefruit')"
+    "recommend('Hungry,Aroused,Sleepy,Giggly,Happy')"
    ]
   },
   {
